--- a/.github/workflows/build-osx-arm-release.yml
+++ b/.github/workflows/build-osx-arm-release.yml
@@ -116,7 +116,15 @@ jobs:
           $conda_exe run -p "${root}/envs/env-base" pip install "setuptools>=65.5.1"
           $conda_exe run -p "${root}/envs/env-base" pip install PySide6
           $conda_exe run -p "${root}/envs/env-base" conda install lxml -y
-          make "${root}/Human-in-the-loop/pyside6"
+          
+          # cd "${root}/Human-in-the-loop"
+          # make pyside6 # DEBUG
+          # /Applications/.EcoAssist_files/miniforge/bin/pyside6-rcc
+          # "$HOME/miniforge/bin/pyside6-rcc"
+          echo "TRIAL ONE"
+          pyside6-rcc -o "${root}/Human-in-the-loop/libs/resources.py" "${root}/Human-in-the-loop/resources.qrc"
+          echo "TRIAL TWO"
+          "$HOME/miniforge/bin/pyside6-rcc" -o "${root}/Human-in-the-loop/libs/resources.py" "${root}/Human-in-the-loop/resources.qrc"
           
           ### install env-tensorflow
           $conda_exe env create --file="${root}/EcoAssist/classification_utils/envs/tensorflow-macos-silicon.yml" -p "${root}/envs/env-tensorflow"
