--- a/.github/workflows/build-windows-release.yml
+++ b/.github/workflows/build-windows-release.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build-windows-release:
-    runs-on: windows-latest
+    runs-on: windows-2022
 
     env:
       RELEASE_VERSION: ${{ github.event.release.tag_name }}
