--- a/.github/workflows/build-windows-release.yml
+++ b/.github/workflows/build-windows-release.yml
@@ -11,7 +11,8 @@ jobs:
     runs-on: windows-2022
 
     env:
-      RELEASE_VERSION: ${{ github.event.release.tag_name }}
+      # RELEASE_VERSION: ${{ github.event.release.tag_name }}
+      RELEASE_VERSION: v5.22
       BUCKET_NAME: github-release-files-storage
       CONDA_DIR: C:\Miniconda
 
