--- a/.github/workflows/build-windows-release.yml
+++ b/.github/workflows/build-windows-release.yml
@@ -189,10 +189,14 @@ jobs:
 
       - name: Authenticate GitHub CLI
         shell: cmd
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           @echo off
-          set SECRET=${{ secrets.GITHUB_TOKEN }}
-          echo "%SECRET%" | gh auth login --with-token
+          echo %GITHUB_TOKEN% | gh auth login --with-token
+
+
+
 
       - name: Get the release body
         shell: cmd
