--- a/.github/workflows/build-windows-release.yml
+++ b/.github/workflows/build-windows-release.yml
@@ -223,8 +223,23 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           @echo off
+          setlocal enabledelayedexpansion
           set RELEASE_NAME=${{ github.ref_name }}
-          gh release edit %RELEASE_NAME% --notes-file new_release_body.txt
+          set RELEASE_BODY=
+          for /f "delims=" %%A in (new_release_body.txt) do (
+              set RELEASE_BODY=!RELEASE_BODY!%%A
+          )
+          echo !RELEASE_BODY! > final_release_body.txt
+          gh release edit %RELEASE_NAME% --notes-file final_release_body.txt
+
+      # - name: Update the release body
+      #   shell: cmd
+      #   env:
+      #     GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   run: |
+      #     @echo off
+      #     set RELEASE_NAME=${{ github.ref_name }}
+      #     gh release edit %RELEASE_NAME% --notes-file new_release_body.txt
 
       # - name: Update the release body
       #   shell: cmd
